tests/resources/errors/errors16.ac
import std;
import std.Error;

struct TestError :: *Error {
    const fn get_name() -> const char* {
        return "TestError";
    }
    const fn get_message() -> const char* {
        return "error raised!";
    }
}

fn foo() | raises TestError {
    raise TestError{};
}

fn bar() | raises TestError {
    try (foo());
}

fn main() {
    try err: (bar()) {
        std.print("caught error!");
        std.print(err.get_message());
    };

    try (bar());
}
